Fix alignment of front page buttons

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -20,6 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 10px;
 }
 
 .buttons a {
